<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_here"
            android:backgroundTint="@color/white"
            android:textSize="16sp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:autofillHints=""
            android:inputType="text" />
        <EditText
            android:id="@+id/task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginHorizontal="16dp"
            android:autofillHints=""
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/task_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:backgroundTint="@color/white"
            />
        <TextView
            android:layout_margin="8dp"
            android:id="@+id/task_time"
            android:text="@string/todos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_description"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/task_time"
            app:layout_constraintLeft_toLeftOf="parent">
            <Spinner
                android:id="@+id/task_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                />
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <Button
                android:id="@+id/task_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginEnd="8dp"
                />
            <Button
                android:id="@+id/task_closed"
                android:layout_marginEnd="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>