<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/choose_cate_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/madimione"
            android:gravity="center_horizontal"
            android:text="@string/create_category"
            android:textColor="@color/joust_blur"
            android:textSize="22sp" />

        <Button
            android:id="@+id/crate_cate_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/madimione"
            android:text="@string/save"
            android:textColor="@color/joust_blur" />

        <Button
            android:id="@+id/create_cate_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/madimione"
            android:text="@string/cancel"
            android:textColor="@color/joust_blur" />

    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_layout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        app:boxStrokeColor="@color/joust_blur"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_cate_title"
        app:startIconDrawable="@drawable/baseline_category_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>