<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    android:padding="5dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/app_name"
            android:paddingStart="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />
        
        <ImageView
            android:id="@+id/note_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:visibility="gone"/>
        
        <TextView
            android:id="@+id/note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:ellipsize="end"
            android:textStyle="normal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/queryHint"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/note_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="20dp"
                android:text="@string/note_time"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/delete_checkbox"
                android:layout_width="20dp"
                android:layout_height="0dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/check"
                android:layout_marginEnd="20dp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>