<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/studying"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_input_email_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                app:boxStrokeColor="@color/joust_blur"
                android:layout_marginRight="32dp"
                android:hint="@string/email"
                app:helperTextTextColor="@color/amour"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--password-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_input_password_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                app:helperTextTextColor="@color/amour"
                app:boxStrokeColor="@color/joust_blur"
                android:layout_marginRight="32dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="178dp"
                    tools:layout_editor_absoluteY="294dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--password again-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_input_pass_layout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"

                app:helperTextTextColor="@color/amour"
                app:boxStrokeColor="@color/joust_blur"
                android:layout_marginRight="32dp"
                android:hint="@string/pass"
                app:endIconMode="password_toggle"

                app:startIconDrawable="@drawable/baseline_lock_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/register_input_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="178dp"
                    tools:layout_editor_absoluteY="294dp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            >
            <Button
                android:id="@+id/register_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:backgroundTint="@color/joust_blur"
                android:padding="12dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="19sp"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/register_btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/joust_blur"
                android:text="Quay lai"
                android:textSize="14sp"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>